--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aho-corasick = "1.0.2"
 memchr = "2.5.0"
 regex-automata = { version =  "0.3.1", git = "https://github.com/pascalkuthe/regex"}
+regex-syntax = "0.7.4"
 ropey = "1.6.0"
 
 [dev-dependencies]
