--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aho-corasick = "1.0.2"
 memchr = "2.5.0"
 regex-automata = { version =  "0.3.1", path = "../regex/regex-automata"}
 regex-syntax = "0.7.4"
@@ -14,3 +13,7 @@ ropey = "1.6.0"
 
 [dev-dependencies]
 proptest = "1.2.0"
+
+[features]
+default = ["perf-inline"]
+perf-inline = []
