--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,14 @@ rust-version = "1.65"
 [dependencies]
 log = "0.4.20"
 memchr = "2.6"
-regex-automata = { version = "0.4.2", git = "https://github.com/pascalkuthe/regex.git", branch = "prefilter" }
-regex-syntax = { version = "0.8.2", git = "https://github.com/pascalkuthe/regex.git", branch = "prefilter" }
+regex-automata = "0.4.5"
+regex-syntax = "0.8.2"
 ropey = { version = "1.6.0", optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.79"
 proptest = "1.2.0"
-regex-test = { version = "0.1.0", git = "https://github.com/pascalkuthe/regex.git", branch = "prefilter" }
+regex-test =  "0.1.0"
 
 [features]
 default = ["perf-inline", "ropey"]
