--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "regex-cursor"
 description = "regex fork that can search discontigous haystacks"
 version = "0.1.0"
 edition = "2021"
+documentation = "https://docs.rs/regex-cursor"
 autor = "Pascal Kuthe <pascalkuthe@pm.me>"
 repository = "https://github.com/pascalkuthe/regex-cursor"
 readme = "README.md"
