--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "regex-cursor"
 description = "regex fork that can search discontigous haystacks"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 documentation = "https://docs.rs/regex-cursor"
 autor = "Pascal Kuthe <pascalkuthe@pm.me>"
@@ -19,7 +19,7 @@ log = "0.4.20"
 memchr = "2.6"
 regex-automata = "0.4.5"
 regex-syntax = "0.8.2"
-ropey = { version = "1.6.0", optional = true }
+ropey = { version = "1.6.0", default-features = false, optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.79"
